logs/dag_id=fill_data/run_id=manual__2024-06-25T16:47:31.868707+00:00/task_id=generate_data_race/attempt=1.log
[2024-06-25T16:47:34.377+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-25T16:47:34.384+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: fill_data.generate_data_race manual__2024-06-25T16:47:31.868707+00:00 [queued]>
[2024-06-25T16:47:34.386+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: fill_data.generate_data_race manual__2024-06-25T16:47:31.868707+00:00 [queued]>
[2024-06-25T16:47:34.387+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-06-25T16:47:34.391+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): generate_data_race> on 2024-06-25 16:47:31.868707+00:00
[2024-06-25T16:47:34.392+0000] {standard_task_runner.py:63} INFO - Started process 121 to run task
[2024-06-25T16:47:34.394+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'fill_data', 'generate_data_race', 'manual__2024-06-25T16:47:31.868707+00:00', '--job-id', '37', '--raw', '--subdir', 'DAGS_FOLDER/fill_data.py', '--cfg-path', '/tmp/tmp31ypa989']
[2024-06-25T16:47:34.394+0000] {standard_task_runner.py:91} INFO - Job 37: Subtask generate_data_race
[2024-06-25T16:47:34.406+0000] {task_command.py:426} INFO - Running <TaskInstance: fill_data.generate_data_race manual__2024-06-25T16:47:31.868707+00:00 [running]> on host 8159af6655a2
[2024-06-25T16:47:34.425+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='fill_data' AIRFLOW_CTX_TASK_ID='generate_data_race' AIRFLOW_CTX_EXECUTION_DATE='2024-06-25T16:47:31.868707+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-25T16:47:31.868707+00:00'
[2024-06-25T16:47:34.426+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-25T16:47:34.445+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-25T16:47:34.445+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "20"
LINE 1: ...DATE Conductores SET activo = False WHERE Id_conductor is 20
                                                                     ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/fill_data.py", line 142, in generate_data_race
    conductores_actuales = schema.get_conductores(20)
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/td7/schema.py", line 29, in get_conductores
    return self.db.run_select(query)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/td7/database.py", line 25, in run_select
    dataframe = pd.read_sql(sql, self.connection)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pandas/io/sql.py", line 661, in read_sql
    return pandas_sql.read_query(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pandas/io/sql.py", line 1736, in read_query
    result = self.execute(sql, params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/pandas/io/sql.py", line 1560, in execute
    return self.con.exec_driver_sql(sql, *args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1770, in exec_driver_sql
    return self._exec_driver_sql(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1674, in _exec_driver_sql
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/usr/local/lib/python3.11/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "20"
LINE 1: ...DATE Conductores SET activo = False WHERE Id_conductor is 20
                                                                     ^

[SQL: UPDATE Conductores SET activo = False WHERE Id_conductor is 20]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-06-25T16:47:34.448+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=fill_data, task_id=generate_data_race, run_id=manual__2024-06-25T16:47:31.868707+00:00, execution_date=20240625T164731, start_date=20240625T164734, end_date=20240625T164734
[2024-06-25T16:47:34.452+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 37 for task generate_data_race ((psycopg2.errors.SyntaxError) syntax error at or near "20"
LINE 1: ...DATE Conductores SET activo = False WHERE Id_conductor is 20
                                                                     ^

[SQL: UPDATE Conductores SET activo = False WHERE Id_conductor is 20]
(Background on this error at: https://sqlalche.me/e/14/f405); 121)
[2024-06-25T16:47:34.490+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-25T16:47:34.495+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-25T16:47:34.496+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
